<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="operator_portable_access_point_suffix" />
    <string name="tether_help_url" formatted="false">file:///android_asset/html/%y%z/tethering_%xhelp.html</string>
    <string name="tether_help_url_mtp" formatted="false">file:///android_asset/html/%y%z/tethering_%xmtp_help.html</string>
    <string name="tether_help_path" formatted="false">html/%y%z/tethering_help.html</string>
    <string name="tether_help_path_mtp" formatted="false">html/%y%z/tethering_mtp_help.html</string>
    <string name="lockpattern_activated">Unlock pattern activated!</string>
    <string name="lockscreen_strings_backup_question_answer_header_txt">Write answer</string>
    <string name="lockscreen_strings_backup_question_answer_hint_txt">Answer</string>
    <string name="lockscreen_strings_backup_question_security_question_prompt_info_txt">You need to select a security question as a backup solution, in case you forget the pattern.</string>
    <string name="lockscreen_strings_backup_question_security_question_prompt_title_txt">Security question</string>
    <string name="lockscreen_strings_backup_question_selector_title_txt">Select a question</string>
    <string name="lockscreen_strings_backup_question_answer_info_txt">Think of storing the answer in a safe place in case you forget it.</string>
    <string name="gui_ok_txt">OK</string>
    <string name="gps_anonymous_data_warning_message_txt">Data transmission charges may apply. Anonymous data will be collected when an application uses GPS.</string>
    <string name="location_warning_message">Data transmission charges may apply.</string>
    <string name="agree_label">Agree</string>
    <string name="disagree_label">Disagree</string>
    <string name="master_reset_title">Settings reset</string>
    <string name="master_reset_summary">Resets phone to its original settings without erasing user data</string>
    <string name="master_reset_desc">"This will reset all settings of your phone, including:
"<li>Phone system settings</li>"
"<li>Bundled application settings</li>"
It will not erase:
"<li>User specified settings</li>"
"<li>Installed applications</li>"
"<li>SD card files, such as music or photos</li></string>
    <string name="master_reset_button_text">Reset phone</string>
    <string name="master_reset_final_desc">Reset phone settings to their original values? It is impossible to reverse this action! Phone will be unavailable during reset.</string>
    <string name="master_reset_final_button_text">Reset settings</string>
    <string name="master_reset_gesture_prompt">Draw your unlock pattern</string>
    <string name="master_reset_gesture_explanation">You must draw your unlock pattern to confirm a phone reset.</string>
    <string name="master_reset_failed">No reset was performed.</string>
    <string name="master_reset_intent">MasterReset</string>
    <string name="master_reset_cancel">Master reset canceled. Flight mode not on.</string>
    <string name="done_label">Done</string>
    <string name="master_clear_desc_cn">"This will erase all data from your phone, including:
"<li>Your account</li>"
"<li>System and application data and settings</li>"
"<li>Downloaded applications</li>"
It will not erase:
"<li>Current system software and bundled applications</li>"
"<li>SD card files, such as music or photos</li></string>
    <string name="display_category_personalisation_title">Personalization</string>
    <string name="theme_label">Theme</string>
    <string name="theme_summary">Change theme and wallpaper in the phone</string>
    <string name="theme_dialog_title_select_theme_txt">Select theme</string>
    <string name="wifi_wapi_as_cert">AS Certificate</string>
    <string name="wifi_wapi_user_cert">User Certificate</string>
    <string name="install_wapi_certs">Install WAPI certificates</string>
    <string name="summary_install_wapi_certs">Install certificates from SD card</string>
    <string name="xloud_strings_xloud_txt">xLOUD™</string>
    <string name="xloud_strings_xloud_desc_txt">Enhance the loudness of speaker</string>
    <string name="swiqi_strings_swiqi_txt">Mobile BRAVIA Engine</string>
    <string name="swiqi_strings_swiqi_desc_txt">Image quality enhancer for photos and videos</string>
    <string name="error_name_conflict">Name conflict with locked Internet access point. Please change.</string>
    <string name="sim_strings_pin_attempts_remaining_txt">Attempts remaining:</string>
    <string name="bluetooth_pairing_rejected_retry_button_text">Retry</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Discoverable for %1$s seconds…</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_disconnect_blank">%1$s will be disconnected.</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_unknown" />
    <string name="bluetooth_not_connected">Pair with this device</string>
    <string name="settings_label">Settings</string>
    <string name="radio_controls_title">Wireless &amp; networks</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="security_settings_title">Location &amp; security</string>
    <string name="wifi_ssid">Network SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_eap_method">EAP method</string>
    <string name="please_select_phase2">Phase 2 authentication</string>
    <string name="wifi_eap_ca_cert">CA certificate</string>
    <string name="wifi_eap_user_cert">User certificate</string>
    <string name="wifi_eap_identity">Identity</string>
    <string name="wifi_eap_anonymous">Anonymous identity</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password.</string>
    <string name="sound_settings_title">Sound</string>
    <string name="display_settings_title">Display</string>
    <string name="dock_settings">Dock</string>
    <string name="sync_settings">Accounts &amp; sync</string>
    <string name="display_settings">Display settings</string>
    <string name="animations_title">Animation</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="screen_timeout_summary">Adjust the delay before the screen automatically turns off</string>
    <string name="storage_settings">Storage</string>
    <string name="call_settings_title">Call settings</string>
    <string name="about_settings">About phone</string>
    <string name="lockpattern_confirm_button_text">Confirm</string>
    <string name="skip_button_label">Cancel</string>
    <string name="applications_settings">Applications</string>
    <string name="language_settings">Language &amp; keyboard</string>
    <string name="language_settings_category">Language settings</string>
    <string name="keyboard_settings_category">Keyboard settings</string>
    <string name="phone_language">Select language</string>
    <string name="phone_language_summary" />
    <string name="user_dict_settings_title">User dictionary</string>
    <string name="user_dict_settings_summary" />
    <string name="accessibility_settings">Accessibility</string>
    <string name="voice_input_output_settings">Voice input &amp; output</string>
    <string name="privacy_settings">Privacy</string>
</resources>