<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:title="@string/language_settings_category" android:key="language_settings_category" />
    <PreferenceScreen android:title="@string/phone_language" android:key="select_language" android:summary="@string/phone_language_summary">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.LocalePicker" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/user_dict_settings_title" android:summary="@string/user_dict_settings_summary">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.UserDictionarySettings" />
    </PreferenceScreen>
    <PreferenceCategory android:title="@string/keyboard_settings_category" android:key="keyboard_settings_category" />
</PreferenceScreen>
