<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/topLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0" android:layout_above="@id/confirmButtonBar">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="15.0dip">
            <TextView android:textSize="19.0dip" android:textColor="#ffffffff" android:id="@id/questionText" android:padding="17.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <EditText android:textSize="19.0dip" android:id="@id/answerText" android:paddingLeft="6.0dip" android:paddingTop="10.0px" android:paddingRight="6.0dip" android:paddingBottom="10.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0px" android:layout_marginTop="8.0px" android:layout_marginRight="5.0px" android:layout_marginBottom="8.0px" android:hint="@string/lockscreen_strings_backup_question_answer_hint_txt" android:layout_below="@id/questionText" android:inputType="text" android:imeOptions="actionDone" />
            <TextView android:textSize="16.0dip" android:textColor="#ffffffff" android:id="@id/saveInfoText" android:paddingLeft="15.0dip" android:paddingTop="11.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lockscreen_strings_backup_question_answer_info_txt" android:layout_below="@id/answerText" />
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:id="@id/confirmButtonBar" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" style="@android:style/ButtonBar">
        <Button android:ellipsize="marquee" android:id="@id/backupAnswerCancelButton" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/skip_button_label" android:singleLine="true" android:layout_weight="1.0" />
        <Button android:ellipsize="marquee" android:id="@id/footerConfirmButton" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/lockpattern_confirm_button_text" android:singleLine="true" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
